...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bluetooth_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:onClick="startStop"
        android:text="START"
        app:layout_constraintBottom_toBottomOf="@+id/students_view"
        app:layout_constraintEnd_toEndOf="@+id/redoUserInfo"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />
...
